--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,11 +11,13 @@
   <link rel="stylesheet" href="{{ '/assets/main.css' | relative_url }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
   <!-- TODO: Add GTM head script here -->
-  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
 j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-KFZ6WWK');</script>
+<!-- End Google Tag Manager -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-JP4THQXB21"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -27,9 +29,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </head>
 <body class="bg-light">
   <!-- TODO: Add GTM noscript here -->
-  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KFZ6WWK"
+  <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KFZ6WWK"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-  
+<!-- End Google Tag Manager (noscript) -->
   {% include header.html %}
   <main class="main pt-5">
     {{ content }}
